# xorg-gccmakedep

./: ChangeLog  Makefile.am  autogen.sh  configure.ac  gccmdep.cpp
